# svansokning

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: daily.yml
app/: streamlit_app.py
data/: geocode_cache.json  listings.parquet
jobs/: daily_email.py  daily_scrape.py
src/svansokning/: config.py  constants.py  distance.py  enrich.py  filters.py  geocode.py  storage.py
src/svansokning/notify/: __init__.py  resend.py
src/svansokning/scrape/: __init__.py  base.py  openrent.py  zoopla.py
tests/: test_distance.py  test_enrich.py  test_filters.py
